# winwifi

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  lint.yml  test.yml  workflow.yml
res/: profile.xml
src/: errors.rs  guid.rs  handle.rs  interfaces.rs  lib.rs  main.rs  profiles.rs  testing.rs
src/profile/: list.rs  remove.rs
src/profiles/: mod.rs
winwifi-bin/: Cargo.toml
winwifi-bin/src/: argparse.rs  main.rs
winwifi-bin/src/network/: list.rs  mod.rs  scan.rs
winwifi-bin/src/profile/: get.rs  mod.rs
