[package]
name = "winwifi"
version = "0.1.0"
edition = "2021"
authors = ["Matt Ehrnschwender (@M_alphaaa)"]
repository = "https://github.com/MEhrn00/winwifi"
description = "Windows WIFI management in Rust"
license = "BSD-3-Clause"


[dependencies.clap]
version = "4.4.18"
features = ["derive"]

[dependencies.windows]
version = "0.52.0"
features = ["Win32_Foundation"]
