[workspace]
members = ["winwifi-bin"]
default-members = [".", "winwifi-bin"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Matt Ehrnschwender (@M_alphaaa)"]
repository = "https://github.com/MEhrn00/winwifi"
description = "Windows Wi-Fi management in Rust"
license = "BSD-3-Clause"

[package]
name = "winwifi"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true


[dependencies]
thiserror = "1.0.56"

[dependencies.quick-xml]
version = "0.31.0"
features = ["serialize"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.windows]
version = "0.52.0"
features = ["Win32_Foundation", "Win32_NetworkManagement_WiFi"]
